<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_padding"
    tools:context=".ui.ConverterActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_txt_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/from_spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_top"
        android:hint="@string/from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/txt_currency_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/to_spinner_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_top"
        android:hint="@string/to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_spinner">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/txt_currency_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_source_currency_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_60_dp"
        android:layout_marginEnd="@dimen/common_margin_10_dp"
        android:text="@string/source_currency"
        app:layout_constraintEnd_toEndOf="@+id/edt_amount"
        app:layout_constraintTop_toBottomOf="@+id/to_spinner_layout" />

    <EditText
        android:id="@+id/edt_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_10_dp"
        android:background="@drawable/edit_text_border"
        android:ellipsize="start"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="@dimen/common_padding_20_dp"
        android:textSize="@dimen/txt_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_source_currency_name"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_convert_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_top"
        android:background="@drawable/btn_round"
        android:text="@string/convert"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_amount" />

    <EditText
        android:id="@+id/edt_destination_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_60_dp"
        android:background="@drawable/edit_text_converted_border"
        android:enabled="false"
        android:hint="@string/converted_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="@dimen/common_padding_20_dp"
        android:textSize="@dimen/txt_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_convert_currency"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txt_result_converted_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_10_dp"
        android:layout_marginBottom="@dimen/common_margin_10_dp"
        android:text="@string/result"
        app:layout_constraintBottom_toTopOf="@+id/edt_destination_currency"
        app:layout_constraintLeft_toLeftOf="@+id/edt_destination_currency" />

    <TextView
        android:id="@+id/txt_destination_currency_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/common_margin_10_dp"
        android:layout_marginBottom="@dimen/common_margin_10_dp"
        android:text="@string/destination_currency"
        app:layout_constraintBottom_toTopOf="@+id/edt_destination_currency"
        app:layout_constraintEnd_toEndOf="@+id/edt_destination_currency" />

    <ProgressBar
        android:id="@+id/progress_bar_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


